# peopleframe

./: .gitignore  README.md  finder_reveal.osa  in.std.peopleframe.XXXXX.plist  in.std.peopleframe.plist  peopleframe.spec  photoframe.spec  pyproject.toml
peopleframe/: audit.py  main.py
