[tool.poetry]
name = "peopleframe"
version = "0.1.0"
description = ""
authors = ["Peter Griess <pg@std.in>"]

[tool.poetry.dependencies]
osxphotos = "^0.46.1"
python = ">=3.7,<3.11"
pyxstar = "^0.2.2"
wand = "^0.6.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pyinstaller = "^4.9"
mypy = "^0.931"
black = "^22.1.0"

[tool.poetry.scripts]
peopleframe = "peopleframe.main:main"
audit_faces = "peopleframe.audit:faces"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
