[tool.poetry]
name = "peopleframe"
version = "0.1.0"
description = ""
authors = ["Peter Griess <pg@std.in>"]

[tool.poetry.dependencies]
osxphotos = "^0.67.0"
python = ">=3.9,<3.11"
pyxstar = "^0.2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pyinstaller = "^6.3"
mypy = "^0.931"
black = "^22.1.0"

[tool.poetry.scripts]
peopleframe = "peopleframe.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
