[tool.poetry]
name = "peopleframe"
version = "0.1.0"
description = ""
authors = ["Peter Griess <pg@std.in>"]

[tool.poetry.dependencies]
osxphotos = "^0.68.4"
python = ">=3.10,<3.13"
pyxstar = "^0.2.2"
certifi = "^2024.8.30"
mixpanel = "^4.10.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^6.3"

[tool.poetry.scripts]
peopleframe = "peopleframe.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
